@@ -1,3 +1,9 @@
+2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b136
+
+	* Fix: Remove the block-random cache file whenever we delete photos
+
+	* Change: Separate the mail headers so that it's easier to read.
+
 2004-08-28  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b135
 
 	* Fix: remove tr that was causing netscape problems
